k8s-dev/auth-db.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-db
  labels:
    app: auth-db
spec:
  ports:
  - name: mysql
    port: 3306
  clusterIP: None
  selector:
    app: auth-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-db
  labels:
    app: auth-db
  
spec:
  serviceName: auth-db
  selector:
    matchLabels:
      app: auth-db
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0.17
        args:
        - --default-authentication-plugin=mysql_native_password
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: auth-data
          mountPath: /var/lib/mysql
      volumes:
      - name: auth-data
        persistentVolumeClaim:
          claimName: local-claim
