k8s-dev/client.yml
apiVersion: v1
kind: Service
metadata:
  name: client
  
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 3000
  selector:
    app: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: nuxt
        image: fishapp_client_nuxt
        tty: true
        ports:
          - containerPort: 3000
