k8s-dev/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      # - path: /api/auth/*
      #   backend:
      #     serviceName: auth
      #     servicePort: 8080
      - path: /graphql
        backend:
          serviceName: api-gateway
          servicePort: 8080
      - path: /graphql/playground
        backend:
          serviceName: api-gateway
          servicePort: 8080
      - path: /*
        backend:
          serviceName: client
          servicePort: 8080
